--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             </span>
                             <div class="good-con">
                                 <div class="name" title="贝医生声波电动牙刷 白色">贝医生声波电动牙刷 白色</div>
-                                <div class="desc">声波净齿，软毛护龈</div>
+                                <div class="desc">声波净齿，1软毛护龈</div>
                                 <div class="price">9.90元 <del>99元</del></div>
                                 <div class="btn-disabled">立即抢购</div>
                                 </span>
